glx/testdata/invalid/missing-required-fields/places/place-missing-name.glx
places:
  place-missing-name:
    type: city


